Fix link visibility and bullet points

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,6 +23,7 @@ span {
   --ifm-color-primary-light: #396fb4;
   --ifm-color-primary-lighter: #3c74bd;
   --ifm-color-primary-lightest: #396fb4;
+  --ifm-color-link: #3164fa;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
@@ -36,5 +37,7 @@ span {
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-link: #5cfdbf;
+  --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
